Fixed minor layout problem in blog post items in homepage

--- a/_sass/3-layouts/homepage/_feature_and_older_posts.scss
+++ b/_sass/3-layouts/homepage/_feature_and_older_posts.scss
@@ -158,7 +158,8 @@
             display: flex;
             flex-flow: column wrap;
             justify-content: space-between;
-            height:465px;          
+            height:465px;
+            width: 100%;         
         } 
         h3{
             margin: 0px 40px 45px ;
